fix: suppress terminally deprecated Unsafe warnings in Mutiny wrapper on JDK 23+